examples/fail/assign_undefined_var.hax
module ZZZ::AssignUndefinedVar;

sub main() -> Int {
  $x = 1;
  return 0;
}
